--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,23 +12,16 @@
         android:theme="@style/Theme.FoodWizard"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.FoodWizard.NoActionBar" />
-        <activity
-            android:name=".Fragments.Mainpage"
-            android:exported="false"
-            android:label="@string/title_activity_mainpage"
-            android:theme="@style/Theme.FoodWizard.NoActionBar" />
-        <activity
-            android:name=".LogIn"
+            android:name=".Record"
             android:exported="false" />
         <activity
             android:name=".Register"
             android:exported="false" />
         <activity
-            android:name=".Fragments.Welcome"
+            android:name=".login"
+            android:exported="false" />
+        <activity
+            android:name=".Welcome"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,6 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
