--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,6 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-
-
+    // okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 }
