--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "org.jetbrains.kotlin.kapt"
 }
 
 android {
@@ -33,6 +35,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+
+
 }
 
 dependencies {
@@ -46,6 +51,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.room:room-common:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'androidx.room:room-runtime:2.4.2'
+
+    kapt 'androidx.room:room-compiler:2.4.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -54,4 +63,18 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    implementation 'com.github.Spikeysanju:MotionToast:1.4' //motiontoast
+
+    implementation 'com.android.car.ui:car-ui-lib:2.0.0'// For LiveData
+    //test
+    testImplementation 'androidx.arch.core:core-testing:2.1.0' // For LiveData
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0" // For LiveData
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3' // For LiveData
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0' // For LiveData
+
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1' //lifecycle
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+
 }
