finish navigation bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1' //lifecycle
     implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
 
 }
