--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     // okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 
-    implementation 'com.github.Spikeysanju:MotionToast:1.4' //motion-toast
+    implementation 'com.github.Spikeysanju:MotionToast:1.4' //motiontoast
 
     implementation 'com.android.car.ui:car-ui-lib:2.0.0'// For LiveData
     //test
@@ -86,8 +86,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
-    implementation 'com.google.firebase:firebase-storage:20.2.0'
-
 
 
 }
