--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,12 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
     implementation 'androidx.activity:activity-ktx:1.4.0'
 
-    implementation platform('com.google.firebase:firebase-bom:31.4.0')
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-auth-interop:20.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'com.squareup.picasso:picasso:2.8'
 
